<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.softgates.recharge.existing.ExistingViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/mobilenoradiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchbymobilenumber"
            android:fontFamily="@font/popreg"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/textsize_etn"
            android:checked="true"
            style="@style/radio"
            android:textColor="@android:color/white"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_rect"
            android:hint="@string/searchbymobilenumber"
            android:inputType="phone"
            android:onTextChanged="@{viewModel.onTextChangedMobileno}"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@{viewModel.mobileno}"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:padding="@dimen/five"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize_sixteen"
            android:textColor="@color/orabgetext"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/searchbyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchbyname"
            android:layout_marginBottom="@dimen/ten"
            android:fontFamily="@font/popreg"
            style="@style/radio"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/textsize_etn"
            android:textColor="@android:color/white"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_rect"
            android:paddingStart="10dp"
            android:text="@{viewModel.name}"
            android:onTextChanged="@{viewModel.onTextChangedName}"
            android:hint="@string/searchbyname"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="17sp" />

        <RelativeLayout
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fifty"
            android:layout_marginTop="@dimen/ten"
            android:onClick="@{()-> viewModel.search()}"
            android:layout_marginEnd="@dimen/fifty"
            android:background="@drawable/gradient"
            android:elevation="@dimen/ten">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchrecyclerview"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/ten"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</layout>