<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.softgates.recharge.network.CustomerDetails" />

        <variable name="index" type="int" />

        <variable
            name="clickListener"
            type="com.softgates.recharge.existing.OnClick" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twoenty"
            android:layout_marginEnd="@dimen/twoenty"
            android:layout_marginBottom="@dimen/twoenty"
            android:background="@color/exisitinguser"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twoenty">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="NAME : "
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.name}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="PHONE NUMBER : "
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.mobile}"
                    android:fontFamily="@font/popreg"
                   android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="@string/flatnocolon"
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.flat_no}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="@string/buildingnamecolon"
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.building_name}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="@string/useridcolon"
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.logindetails.get(0).login}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ten"
                    android:fontFamily="@font/popreg"
                    android:text="@string/passwordcolon"
                    android:textColor="@color/orabgetext" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.logindetails.get(0).PASSWORD}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orabgetext"
                    android:text="LAST RECHARGE DATE : "
                    android:fontFamily="@font/popreg"
                    android:layout_marginStart="@dimen/ten"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    app:date="@{viewModel.date}"
                    android:fontFamily="@font/popreg"
                    android:textSize="@dimen/textsize_etn"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyfive"
                android:layout_marginTop="@dimen/twoenty"
                android:layout_marginEnd="@dimen/ten"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginBottom="@dimen/twoenty"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/fourtyfive"
                    android:layout_marginEnd="@dimen/five"
                    android:background="@drawable/gradient"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/popreg"
                        android:text="PREPAID"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_twl" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/fourtyfive"
                    android:layout_marginStart="@dimen/five"
                    android:layout_marginBottom="@dimen/twoenty"
                    android:layout_weight="1"
                    android:onClick="@{() -> clickListener.onRenew(viewModel,index)}"
                    android:background="@drawable/gradient">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/popreg"
                        android:text="RENEW"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_twl" />

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</layout>